--- a/VSL/index.html
+++ b/VSL/index.html
@@ -143,7 +143,7 @@ function getParams() {
 <style type="text/css">.ocultar{display:none;}
 </style>
 <script type="text/javascript">
-var tmin = 0;
+var tmin = 1000000;
 var tseg = 2;
   
 var tpitch = (tmin * 60000) + (tseg * 1000);
@@ -157,7 +157,7 @@ for (var i = 0; i < list.length; i++) {
     }
 }
 </script><!---⇈⇈⇈⇈⇈⇈⇈⇈⇈⇈⇈⇈ SCRIPT DELAY BOTÃO ⇈⇈⇈⇈⇈⇈⇈⇈⇈⇈⇈⇈--->&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <!---⇊⇊⇊⇊⇊⇊⇊⇊⇊⇊⇊⇊ INICIO RODAPÉ ⇊⇊⇊⇊⇊⇊⇊⇊⇊⇊⇊⇊--->
-<div class="text-white mt-2"><strong><a class="text-white" href="termos.html"><span style="color:#7f8c8d;">Termos de Uso</span></a><span style="color:#7f8c8d;"> | </span><a class="text-white" href="privacidade.html"><span style="color:#7f8c8d;">Pol&iacute;tica de Privacidade</span></a></strong></div>
+
 
 <div style="margin-top: 20px;">
 <p style="color:rgba(122,122,122,.77);font-weight: bold;font-size: 10px;"></p>
